@@ -2,7 +2,9 @@
 \page changelog Changelog
 
 \section c018 version 0.17 -> 0.17+
-
+ - The READ CAPACITY scsi command now properly returns the number of
+   the last LBA (n-1); not the number of LBA's (n). INITIALIZE now
+   works properly on a scsi disk. (18-feb-2008, Camiel Vanderhoeven)
  - Added READ_LONG scsi command, and support for MODE_SENSE
    changeable parameter pages. (last bit needed to get SCSI
    working on OpenVMS) (16-feb-2008, Camiel Vanderhoeven)
